--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The One - Boilerplate</title>
+  <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="./style.min.css">
 </head>
 <body>
